--- a/src/css/NavFooter.css
+++ b/src/css/NavFooter.css
@@ -10,3 +10,7 @@
     padding-bottom: 15rem !important;
     background: linear-gradient( rgb(255, 255, 255) 20%, rgb(6, 115, 137) 80%);
   }
+
+  .footer-col-3,ul,li{
+     list-style: none;
+  }
